# ValEnsPy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  API_doc.html  CONTRIBUTING.md  README.md  api.html  catalog.csv  catalog_summary.csv  environment.yml  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: API_doc.doctree  api.doctree  environment.pickle  getting_started.doctree  index.doctree
CORDEX_eval_scripts/: CORDEX-CMIP6.json  catalog.csv  catalog.py  catalog_summary.csv  load_ALARO_CCLM_data.py  load_ALARO_CCLM_data_time_series_diags.py  load_ALARO_data.py  load_ALARO_data_without_intake.py  maps_development.ipynb  maps_development_Rx1d_TXx_TNn.ipynb  master_pbs_job.sh  master_script.ipynb  master_script.py  master_script_manual.py  matplotlibrc  sub_master.sh
_autosummary/: diagnostic.diagnostic.DataSetDiagnostic.html  diagnostic.diagnostic.Diagnostic.html  diagnostic.diagnostic.Ensemble2Ref.html  diagnostic.diagnostic.Ensemble2Self.html  diagnostic.diagnostic.Model2Ref.html  diagnostic.diagnostic.Model2Self.html  diagnostic.diagnostic.html  diagnostic.functions.annual_cycle.html  diagnostic.functions.bias.html  diagnostic.functions.calc_metrics_da.html  diagnostic.functions.calc_metrics_ds.html  diagnostic.functions.calc_metrics_dt.html  diagnostic.functions.diurnal_cycle.html  diagnostic.functions.diurnal_cycle_bias.html  diagnostic.functions.get_userdefined_binwidth.html  diagnostic.functions.html  diagnostic.functions.mean_absolute_error.html  diagnostic.functions.mean_bias.html  diagnostic.functions.optimal_bin_width.html  diagnostic.functions.perkins_skill_score.html  diagnostic.functions.perkins_skill_score_value.html  diagnostic.functions.requires_variables.html  diagnostic.functions.root_mean_square_error.html  diagnostic.functions.spatial_bias.html  diagnostic.functions.spatial_time_mean.html  diagnostic.functions.spearman_correlation.html  diagnostic.functions.temporal_bias.html  diagnostic.functions.time_series_spatial_mean.html  diagnostic.functions.time_series_trend.html  diagnostic.functions.urban_heat_island.html  diagnostic.functions.urban_heat_island_diurnal_cycle.html  diagnostic.html  diagnostic.plot_utils.default_plot_kwargs.html  diagnostic.plot_utils.html  diagnostic.visualizations.create_custom_cmap.html  diagnostic.visualizations.html  diagnostic.visualizations.plot_annual_cycle.html  diagnostic.visualizations.plot_diurnal_cycle.html  diagnostic.visualizations.plot_map.html  diagnostic.visualizations.plot_maps_mod_ref_diff.html  (+36 more)
_modules/: index.html
_sources/: getting_started.rst.txt  index.rst.txt
_static/: custom.css
analysis_ucl/: CCLM_visualisation.ipynb  LCZ_comparison.ipynb  Observational_timeseries.ipynb  Observations_Leuven_analysis.ipynb  Regridding_popdens.ipynb  UrbClim.ipynb  WOW_data.ipynb  WRF_visualisation.ipynb  aws.ipynb  functions.py  netatmo.ipynb  skill_scores_ucl.ipynb  visualize_wrf_grids.ipynb
ancilliary_data/: CORDEX_variable_requirement_table.csv  lookuptable_EOBS.csv
ancilliary_scripts/: CLIMATE_GRID_meta.csv  climate_grid_daily.txt  download_era5_single_level.py  grid_CLIMATE_GRID.ipynb  process_CLIMATE_GRID_Rdata_to_netcdf.py  readRdata2.py
contribution_pages/: CONTRIBUTING.html  GIT.html  INSTALL.html  INSTALL_VSC.html  dev_notes.html  index.html
deployment/: .build_package.sh.swp  build_package.sh  dev_pipeline.sh  dev_pipline.sh
doc_examples/: index.html  making_a_diagnostic.html  workflow_example.html
docs/: API_doc.rst  CONTRIBUTING.md  CONTRIBUTING_VSC.md  api.rst  autodoc_diagnostic.py  conf.py  dev_notes.rst  getting_started.rst  index.rst  sphinx_build
evaluation_cclm/: CaseStudy2019.ipynb  DetectingExtremeEvents.ipynb  cclm_diurnal_cycle.ipynb  cclm_domains.ipynb  cclm_eur11_cpm_boundaries.ipynb  cclm_eval_maps.ipynb  cclm_eval_maps_CPM_rsds.ipynb  cclm_eval_plot_topography.ipynb  cclm_eval_points.ipynb  (+15 more)
(+1012 files in other folders)
