[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
  "Kobe Vandelanotte <kobe.vandelanotte@meteo.be>",
  " ... "
]
description = "A Python package to validate gridded model data."
license = ","
name = "valenspy"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dask = "^2024.3.1"
matplotlib = "^3.8.3"
nc-time-axis = "^1.4.1"
netCDF4 = "^1.6.5"
pandas = "^2.2.1"
pooch = "^1.8.1"
python = "^3.9"
scipy = "^1.13.0"
shapely = "^2.0.3"
xarray = "^2024.2.0"
xarray-datatree = "^0.0.14"
cdo = "^1.6.1"
cf-xarray = "^0.9.4"

# Development group
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"  # To ensure clean-coding standards

# Documentation group
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.3"
pydata-sphinx-theme = "^0.15.2"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"

# Examples group
[tool.poetry.group.examples]

[tool.poetry.group.examples.dependencies]
gcsfs = "^2024.3.1"
jinja2 = "^3.1.4"
zarr = "^2.18.0"

# Packaging group
[tool.poetry.group.packaging]

[tool.poetry.group.packaging.dependencies]
poetry = "^1.8.2"
